--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,16 @@
 doctype html
-html
+html(lang='en')
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', 
+      href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css',
+      integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh',
+      crossorigin='anonymous')
   body
-    block content
+    div(class='container')
+      div(class='row justify-content-center')
+        div(class='col-12 col-md-6 text-center')
+          block content
